server/templates/test yamls/IdeaStation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-service
spec:
  ports:
    - port: 80
    - targetPort: 3000 # has to match container port
  clusterIP: None
  selector:
    app: ideastation
