server/templates/test yamls/IdeaStation/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
	name: myapp-ingress
spec:
	rules:
	- http:
			paths: # this section can define the routing based on the path after the /
			- backend:
					serviceName: app-service # must be an internal service that the request is forwarded to
					servicePort: 80
